-m 'mi segundo commit'

--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Pagina Personal</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="foto/icono.ico">
 </head>
 
 <body>
 	<section class="box">
-		<img src="foto/Harris.jpg" width="200" alt="" class="box-img">
+		<img src="foto/img.jpg" width="200" alt="" class="box-img">
         <h1>Harrinson Taipe</h1>
         <h2>Estudiante - Programacion Web</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>   
+        <p>Hola mi nombre es Harrison Taipe soy estudiante del curso de programacion web y esta es mi primera experiencia usando html.</p>   
     
 </body>
 </html>
