--- a/index.html
+++ b/index.html
@@ -16,7 +16,85 @@
 		<img src="foto/img.jpg" width="200" alt="" class="box-img">
         <h1>Harrinson Taipe</h1>
         <h2>Estudiante - Programacion Web</h2>
-        <p>Hola mi nombre es Harrison Taipe soy estudiante del curso de programacion web y esta es mi primera experiencia usando html.</p>   
-    
+        <p>Hola mi nombre es Harrison Taipe soy estudiante del curso de programacion web y esta es mi primera experiencia usando html.</p>
+    </section> 
+
+<h3>Competencias</h3>
+    <div class="conteiner">
+
+     		<table class="table">
+     		<thead>
+     			<tr>
+     				<th>HTML</th>
+     			</tr>
+     		</thead>
+     		<tbody>
+     			<tr>
+     				<td><img src="foto/HTML.jpg" width="160" height="100" ></td>
+     			</tr>
+     		</tbody>
+         </table>
+         <table class="table">
+     		<thead>
+     			<tr>
+     		      <th>CSS</th>
+     			</tr>
+     		</thead>
+     		<tbody>
+     			<tr>
+     				<td><img src="foto/CSS.jpg" width="160" height="100" ></td>
+     			</tr>
+     		</tbody>
+         </table>
+         <table class="table">
+     		<thead>
+     			<tr>
+     				<th>JavaScrip</th>
+     			</tr>
+     		</thead>
+     		<tbody>
+     			<tr>
+     				<td><img src="foto/JavaScrip.jpg" width="160" height="100" ></td>
+     			</tr>
+     		</tbody>
+         </table>
+         <table class="table">
+         <thead>
+            <tr>
+               <th>Python</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <td><img src="foto/Python.jpg" width="160" height="100" ></td>
+            </tr>
+         </tbody>
+         </table>
+         <table class="table">
+         <thead>
+            <tr>
+               <th>MySQL</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <td><img src="foto/MySQL.jpg" width="160" height="100"></td>
+            </tr>
+         </tbody>
+         </table>
+
+    </div>
+
+
+     <form action="">
+     	<h2>Contactame</h2>
+     	<input type="text" name="nombre" placeholder="Nombre">
+     	<input type="text" name="apellido" placeholder="Apellido">
+     	<input type="email" name="correo" placeholder="Correo">
+     	<input type="number" name="telefono" placeholder="Telefono">
+     	<textarea name="mensaje" placeholder="Escriba aqui su mensaje"></textarea>
+        <input type="button" value="Enviar" id="boton"> 
+     </form>
+
 </body>
 </html>
